# llm-shared-memory

./: .env.example  .gitignore  Dockerfile  LICENSE  MCP_SETUP.md  Makefile  README.md  biblion-watch.sh  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  biblion-inject-project-id.sh
biblion/: config.py  embedding.py  main.py  models.py
biblion/bridge/: __init__.py  core.py  models.py  routes.py  slack.py
biblion/core/: biblion.py  canonicalize.py  sanitize.py  scoring.py
biblion/routes/: biblion.py
biblion/storage/: qdrant.py  redis.py
docs/: BIBLION_IMPLEMENTATION.md  BRIDGE_MODE_IMPLEMENTATION.md
indexer/: chunker.py  config.py  models.py
indexer/core/: indexer.py
indexer/routes/: indexer.py
indexer/storage/: __init__.py  redis.py
mcp-server-ts/: package-lock.json  package.json
mcp-server-ts/src/: client.ts  index.ts
mcp_server/: client.py  server.py  session.py
tailscale/config/: biblion.json  webui.json
tests/: test_biblion.sh  test_indexer.sh
webui/: Dockerfile  package-lock.json  package.json
webui/app/: layout.tsx  page.tsx
webui/app/api/biblion/clear/: route.ts
webui/app/api/bridge/: route.ts
webui/app/api/indexer/clear/: route.ts
webui/app/api/indexer/progress/: route.ts
webui/app/api/memento/: route.ts
webui/app/api/memento/[id]/: route.ts
webui/app/api/projects/: route.ts
webui/app/api/search/biblion/: route.ts
webui/app/api/search/indexer/: route.ts
webui/app/api/status/: route.ts
