[project]
name = "biblion"
version = "0.1.0"
description = "Standalone semantic knowledge base backed by Qdrant and Ollama embeddings"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "redis>=5.0",
    "mcp>=1.0.0",
]

[project.scripts]
biblion = "biblion.main:run"
biblion-mcp = "mcp_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biblion", "indexer", "mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
